0.25
  - add string constraint. This is used to check the value is string.
    If value is not defined or reference, this check return false.
  - You can call multiple check calls.
    $rule->check('string')->check('not_blank');
  - You can write only $rule->require('k1')
    from now, $rule->require('k1') take syntax error.
0.24
  - when default option is specified, result data become valid
    (This is backword imcompatible, but old behavior is a little
     wrong and new behavior is better)
0.23
  - remove syntax attribute
  - use constraints function from $_ in constraint function;
    ----------------------------------------------------
    my $rule = [
      title => [
        sub { $_->blank($_[0]) || $_->regex($_[0], qr/[0-9]+/) }
      ]
    ];
    ----------------------------------------------------

  - add create_rule method and new rule syntax
    ----------------------------------------------------
    my $rule = $vc->create_rule;
    $rule->require('id')->check(
      'int'
    )->message('id should be integer');
    $rule->require('name')->check(
      ['not_blank' => 'name is emtpy'],
      [{length => [1, 5]} => 'name is too long']
    );
    $rule->optional('age')->check(
      'int'
    )->default(20);
    ----------------------------------------------------
0.22
  - remove Validator::Custom::Rules(EXPERIMANTAL) because this rule set can't manipulate
    multiple rules well
0.21
  - normalized_rule attribute(EXPERIMENTAL) is changed to rule_obj(EXPERIMENTAL)
    rule become saved as object.
  - validate method can receive Validator::Custom::Rule object(EXPERIMENTAL)
  - add Validator::Custom::Rule and Validator::Custom::Rules to manipulate multiple rules easily
  - add EXPERIMENTAL filter representation in filter function
    {result => 1, output => $value} mean [1, $value];
0.20
  - add EXPERIMENTAL feature that you can return custom error message
    in user constraint function.
0.19
  - suppress filter function undef warning.
0.18